--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,4 @@
 DATABASE_URL=string
 PORT=number
 
-PRODUCTS_MICROSERVICE_HOST=string
-PRODUCTS_MICROSERVICE_PORT=number
+NATS_SERVERS="string,string,..."
