--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -4,7 +4,7 @@ steps:
   args:
     - -c
     - |
-      docker build -t southamerica-east1-docker.pkg.dev/san-valen-commerce/san-valen-registry/orders-ms -f dockerfile.prod --platform=linux/amd64 --build-arg DATABASE_URL=$$DATABASE_URL --build-arg NATS_SERVERS=$$NATS_SERVERS .
+      docker build -t southamerica-east1-docker.pkg.dev/san-valen-commerce/san-valen-registry/orders-ms -f Dockerfile.prod --platform=linux/amd64 --build-arg DATABASE_URL=$$DATABASE_URL --build-arg NATS_SERVERS=$$NATS_SERVERS .
   secretEnv: ['DATABASE_URL', 'NATS_SERVERS']
 
 - name: 'gcr.io/cloud-builders/docker'
